syntax = "proto3";

package api;

option go_package = "natpunch/proto/gen/go/;api";

import "google/protobuf/timestamp.proto";

message Endpoint {
  string ip_address = 1;
  uint32 port = 2;
}

message Message {
  oneof content {
    RegisterRequest register_request = 1;
    RegisterResponse register_response = 2;
    ClientListRequest client_list_request = 3;
    ClientListResponse client_list_response = 4;
    ConnectRequest connect_request = 5;
    ConnectResponse connect_response = 6;
    ConnectionEstablished connection_established = 7;
    Error error = 8;
    KeepAlive keep_alive = 9;
    DebugMessage debug_message = 10;
  }
}

enum NatType {
  UNKNOWN = 0;
  FULL_CONE = 1;
  RESTRICTED_CONE = 2;
  PORT_RESTRICTED_CONE = 3;
  SYMMETRIC = 4;
}

message ConnectRequest {
  string destination_client_id = 1;
  string source_client_id = 2;
  Endpoint local_endpoint = 3;
  uint32 attempt_number = 4;
}

message ConnectResponse {
  bool accepted = 1;
  string client_id =2;
  string message = 3;
  NatType nat_type = 4;
  uint32 attempt_number = 5;
}

message ConnectionEstablished { string message = 1; string client_id = 2; }

message RegisterRequest {
  Endpoint local_endpoint = 1;
}

message RegisterResponse {
  bool success = 1;
  Endpoint public_endpoint = 2;
  string client_id = 3;
  string message = 4;
}

message ClientListRequest { string request_id = 1; }

message ClientListResponse {
  bool success = 1;
  string request_id = 2;
  repeated ClientInfo clients = 3;
  string message = 4;
}

message ClientInfo {
  string client_id = 1;
  Endpoint public_endpoint = 2;
}

message Error { string message = 1; }

message KeepAlive {
  string client_id = 1;
}

message DebugMessage { string message = 1; }
